--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
+    <width>420</width>
     <height>300</height>
    </rect>
   </property>
@@ -40,7 +40,7 @@
    <widget class="QLabel" name="lblEndTime">
     <property name="geometry">
      <rect>
-      <x>220</x>
+      <x>250</x>
       <y>10</y>
       <width>59</width>
       <height>18</height>
@@ -53,7 +53,7 @@
    <widget class="QTimeEdit" name="teEndTime">
     <property name="geometry">
      <rect>
-      <x>240</x>
+      <x>270</x>
       <y>0</y>
       <width>118</width>
       <height>32</height>
@@ -64,47 +64,22 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>60</y>
-      <width>59</width>
-      <height>18</height>
+      <y>40</y>
+      <width>51</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
-     <string>주기(분)</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="lblRingCount">
-    <property name="geometry">
-     <rect>
-      <x>210</x>
-      <y>60</y>
-      <width>59</width>
-      <height>18</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>횟수</string>
+     <string>정기알람
+ 주기(분)</string>
     </property>
    </widget>
    <widget class="QSpinBox" name="sbPeriod">
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>50</y>
-      <width>121</width>
-      <height>32</height>
-     </rect>
-    </property>
-    <property name="maximum">
-     <number>1000</number>
-    </property>
-   </widget>
-   <widget class="QSpinBox" name="sbRingCount">
-    <property name="geometry">
-     <rect>
-      <x>240</x>
-      <y>50</y>
-      <width>121</width>
+      <x>80</x>
+      <y>40</y>
+      <width>111</width>
       <height>32</height>
      </rect>
     </property>
@@ -115,7 +90,7 @@
    <widget class="QPushButton" name="btnStatus">
     <property name="geometry">
      <rect>
-      <x>160</x>
+      <x>170</x>
       <y>190</y>
       <width>88</width>
       <height>34</height>
@@ -130,9 +105,36 @@
      <rect>
       <x>20</x>
       <y>90</y>
-      <width>361</width>
+      <width>381</width>
       <height>91</height>
      </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lblPeriod_2">
+    <property name="geometry">
+     <rect>
+      <x>200</x>
+      <y>40</y>
+      <width>71</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>수시 알람
+ 최대주기(초)</string>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="sbFrequentPeriod">
+    <property name="geometry">
+     <rect>
+      <x>280</x>
+      <y>40</y>
+      <width>111</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="maximum">
+     <number>1000</number>
     </property>
    </widget>
   </widget>
@@ -141,7 +143,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>400</width>
+     <width>420</width>
      <height>30</height>
     </rect>
    </property>
